Database: Setup database models with sequelize

--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "supertest": "^2.0.1"
   },
   "dependencies": {
+    "body-parser": "^1.15.2",
+    "dotenv": "^2.0.0",
     "express": "^4.14.0",
     "faker": "^3.1.0",
     "sequelize": "^3.27.0"
