--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Document Management System to manage users, roles and documents",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js",
+    "start": "nodemon server/index.js",
+    "db-init": "node server/setup.js",
     "test": "istanbul cover _mocha --R test/server"
   },
   "repository": {
