--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   },
   "dependencies": {
     "body-parser": "^1.15.2",
+    "chai": "^3.5.0",
     "dotenv": "^2.0.0",
     "express": "^4.14.0",
     "faker": "^3.1.0",
