--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "supertest": "^2.0.1"
   },
   "dependencies": {
+    "bcrypt": "^0.8.7",
     "body-parser": "^1.15.2",
     "chai": "^3.5.0",
     "dotenv": "^2.0.0",
