Feature: Add api to get all users if admin made the request

--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "dotenv": "^2.0.0",
     "express": "^4.14.0",
     "faker": "^3.1.0",
+    "jsonwebtoken": "^7.1.9",
     "pg": "^6.1.0",
     "sequelize": "^3.27.0"
   }
