--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "Document Management System to manage users, roles and documents",
   "main": "index.js",
   "scripts": {
-    "start": "node server/index.js",
-    "db-init": "node server/setup.js",
-    "test": "istanbul cover _mocha --R test/server"
+    "start": "babel-node server/index.js",
+    "db-init": "babel-node server/setup.js",
+    "test": "cross-env NODE_ENV=test nyc --reporter=lcov mocha  test/server"
   },
   "repository": {
     "type": "git",
@@ -18,6 +18,13 @@
     "system",
     "andela"
   ],
+  "nyc": {
+    "require": [
+      "babel-register"
+    ],
+    "sourceMap": false,
+    "instrument": false
+  },
   "author": "Femi Oladeji",
   "license": "ISC",
   "bugs": {
@@ -25,19 +32,27 @@
   },
   "homepage": "https://github.com/andela-foladeji/dms-api#readme",
   "devDependencies": {
+    "babel-preset-es2015": "^6.18.0",
+    "chai": "^3.5.0",
     "coveralls": "^2.11.15",
+    "faker": "^3.1.0",
     "istanbul": "^0.4.5",
     "mocha": "^3.1.2",
-    "faker": "^3.1.0",
-    "chai": "^3.5.0",
     "supertest": "^2.0.1"
   },
   "dependencies": {
+    "babel-cli": "^6.18.0",
+    "babel-core": "^6.21.0",
+    "babel-istanbul": "^0.12.1",
+    "babel-plugin-istanbul": "^3.0.0",
+    "babel-register": "^6.18.0",
     "bcrypt": "^0.8.7",
     "body-parser": "^1.15.2",
+    "cross-env": "^3.1.3",
     "dotenv": "^2.0.0",
     "express": "^4.14.0",
     "jsonwebtoken": "^7.1.9",
+    "nyc": "^10.0.0",
     "pg": "^6.1.0",
     "sequelize": "^3.27.0"
   }
