--- a/package.json
+++ b/package.json
@@ -31,28 +31,47 @@
     "url": "https://github.com/andela-foladeji/dms-api/issues"
   },
   "homepage": "https://github.com/andela-foladeji/dms-api#readme",
-  "devDependencies": {
+    "devDependencies": {
+    "babel-plugin-add-module-exports": "^0.2.1",
+    "babel-plugin-istanbul": "^3.0.0",
+    "babel-plugin-react-html-attrs": "^2.0.0",
+    "babel-plugin-transform-class-properties": "^6.19.0",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-preset-es2015": "^6.18.0",
+    "babel-preset-react": "^6.16.0",
+    "babel-preset-stage-0": "^6.16.0",
+    "babel-watch": "^2.0.5",
     "chai": "^3.5.0",
     "coveralls": "^2.11.15",
+    "cross-env": "^3.1.3",
     "faker": "^3.1.0",
     "istanbul": "^0.4.5",
     "mocha": "^3.1.2",
-    "cross-env": "^3.1.3",
     "nyc": "^10.0.0",
     "supertest": "^2.0.1"
   },
   "dependencies": {
-    "babel-preset-es2015": "^6.18.0",
+    "axios": "^0.15.3",
     "babel-cli": "^6.18.0",
     "babel-core": "^6.21.0",
-    "babel-plugin-istanbul": "^3.0.0",
+    "babel-loader": "^6.2.10",
     "babel-register": "^6.18.0",
     "bcrypt": "^0.8.7",
     "body-parser": "^1.15.2",
     "dotenv": "^2.0.0",
     "express": "^4.14.0",
+    "history": "^4.5.0",
     "jsonwebtoken": "^7.1.9",
     "pg": "^6.1.0",
-    "sequelize": "^3.27.0"
+    "react": "^15.4.1",
+    "react-dom": "^15.4.1",
+    "react-redux": "^5.0.1",
+    "react-router": "^3.0.0",
+    "redux": "^3.6.0",
+    "redux-logger": "^2.7.4",
+    "redux-promise-middleware": "^4.2.0",
+    "redux-thunk": "^2.1.0",
+    "sequelize": "^3.27.0",
+    "webpack": "^1.14.0"
   }
 }
