--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Document Management System to manage users, roles and documents",
   "main": "index.js",
   "scripts": {
-    "start": "babel-node server/index.js",
-    "db-init": "babel-node server/setup.js",
+    "start": "gulp",
+    "prepareDB": "gulp prepareDB",
     "test": "cross-env NODE_ENV=test nyc --reporter=lcov mocha  test/server"
   },
   "repository": {
@@ -31,7 +31,7 @@
     "url": "https://github.com/andela-foladeji/dms-api/issues"
   },
   "homepage": "https://github.com/andela-foladeji/dms-api#readme",
-    "devDependencies": {
+  "devDependencies": {
     "babel-plugin-add-module-exports": "^0.2.1",
     "babel-plugin-istanbul": "^3.0.0",
     "babel-plugin-react-html-attrs": "^2.0.0",
@@ -45,6 +45,7 @@
     "coveralls": "^2.11.15",
     "cross-env": "^3.1.3",
     "faker": "^3.1.0",
+    "gulp-load-plugins": "^1.4.0",
     "istanbul": "^0.4.5",
     "mocha": "^3.1.2",
     "nyc": "^10.0.0",
@@ -58,8 +59,10 @@
     "babel-register": "^6.18.0",
     "bcrypt": "^0.8.7",
     "body-parser": "^1.15.2",
+    "browser-sync": "^2.18.6",
     "dotenv": "^2.0.0",
     "express": "^4.14.0",
+    "gulp": "^3.9.1",
     "history": "^4.5.0",
     "jsonwebtoken": "^7.1.9",
     "pg": "^6.1.0",
@@ -72,6 +75,7 @@
     "redux-promise-middleware": "^4.2.0",
     "redux-thunk": "^2.1.0",
     "sequelize": "^3.27.0",
-    "webpack": "^1.14.0"
+    "webpack": "^1.14.0",
+    "webpack-stream": "^3.2.0"
   }
 }
