--- a/package.json
+++ b/package.json
@@ -63,13 +63,16 @@
     "dotenv": "^2.0.0",
     "express": "^4.14.0",
     "gulp": "^3.9.1",
+    "gulp-sass": "^3.0.0",
     "history": "^4.5.0",
     "jsonwebtoken": "^7.1.9",
+    "material-ui": "^0.16.6",
     "pg": "^6.1.0",
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
     "react-redux": "^5.0.1",
     "react-router": "^3.0.0",
+    "react-tap-event-plugin": "^2.0.1",
     "redux": "^3.6.0",
     "redux-logger": "^2.7.4",
     "redux-promise-middleware": "^4.2.0",
