--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "react-tap-event-plugin": "^2.0.1",
     "redux": "^3.6.0",
     "redux-logger": "^2.7.4",
+    "redux-persist": "^4.1.0",
     "redux-promise-middleware": "^4.2.0",
     "redux-thunk": "^2.1.0",
     "sequelize": "^3.27.0",
